# Annoyance

./: pyproject.toml
annoyance/: __init__.py  main.py
